--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,26 @@
     </properties>
 
     <dependencies>
+    
         <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.18.0</version> <!-- tai uusin versio -->
+    <version>4.18.0</version> 
+    <!-- tai uusin versio -->
 </dependency>
 
-    <dependency>
+        <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-devtools-v139</artifactId>
+    <version>4.35.0</version>
+        </dependency>
+
+
+        <dependency>
     <groupId>org.jsoup</groupId>
     <artifactId>jsoup</artifactId>
     <version>1.16.1</version>
-</dependency>
+        </dependency>
 
     </dependencies>
 
